# jaymod

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  cmake-build.yml
cmake/: JaymodBuildMod.cmake  JaymodCrossCompile32.cmake  JaymodPlatform.cmake  JaymodSetupFeatures.cmake
make/platform/: mingw
project/: info.py
src/Omnibot/Common/: BotExports.h  BotLoadLibrary.cpp  Functions_Bot.h  IEngineInterface.h  MessageHelper.h  Omni-Bot_BasicTypes.h  Omni-Bot_Events.h  Omni-Bot_Types.h
src/Omnibot/ET/: ET_Config.h  ET_Messages.h
src/cgame/: cg_debriefing.cpp  cg_event.cpp
src/game/: g_etbot_interface.cpp  g_etbot_interface.h  g_local.h
src/ui/: menudef.h
